<!--
  ~ Copyright (c) 2016 Daniel Campodonico; Emiliano Gioria; Lucas Moretti.
  ~ This file is part of Lab05.
  ~
  ~ Lab05 is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Lab05 is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Lab05.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Laboratorio05</string>
    <string name="action_settings">Settings</string>
    <string name="action_alta_usuario">Alta usuario</string>
    <string name="action_alta_proyecto">Alta proyecto</string>
    <string name="error_horas_estimadas">Horas estimadas inválidas</string>
    <string name="error_prioridad">Prioridad inválida</string>
    <string name="error_descripcion">Descripción inválida</string>
    <string name="error_nombre_usuario">Nombre de usuario inválido</string>
    <string name="error_email_usuario">Dirección de email inválida</string>
    <string name="error_telefono_usuario">Teléfono inválido</string>
    <string name="exito_nueva_tarea">Se ha creado una nueva tarea</string>
    <string name="exito_modificar_tarea">Se ha modificado la tarea</string>
    <string name="exito_nuevo_proyecto">Se ha creado un nuevo proyecto</string>
    <string name="exito_modificar_proyecto">Se ha modificado el proyecto</string>
    <string name="tv_responsable">Responsable: </string>
    <string name="tv_prioridad">Prioridad: </string>
    <string name="tv_minutos_asignados">Min. asignados: </string>
    <string name="tv_minutos_trabajados">Min. trabajados: </string>
    <string name="dialog_message">¿Desea borrar la tarea %s?</string>
    <string name="dialog_title">Confirmar eliminación</string>
    <string name="dialog_aceptar">Aceptar</string>
    <string name="dialog_cancelar">Cancelar</string>
    <string name="exito_eliminar_tarea">Se ha eliminado la tarea</string>
    <string name="title_activity_buscar_tarea_desvio">Buscar tareas desviadas</string>
    <string name="action_buscar_tarea_desvio_title">Buscar tareas desviadas</string>
    <string name="switch_text">Tarea terminada</string>
    <string name="tv_minutos_desvio">Minutos de desvío</string>
    <string name="btn_buscar">Buscar</string>
    <string name="error_minutos_desvio">Minutos de desvío inválidos</string>
    <string name="title_activity_alta_usuario">Alta Usuario</string>
    <string name="button_guardar">Guardar</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="title_activity_alta_tarea">Alta Tarea</string>
    <string name="title_activity_editar_tarea">Editar Tarea</string>
    <string name="action_nueva_tarea">Nueva tarea</string>
    <string name="datos_usuario">Datos del usuario</string>
    <string name="usuario_telefono">Teléfono</string>
    <string name="usuario_email">Email</string>
    <string name="usuario_nombre">Nombre</string>
    <string name="textViewDescripcion">Descripción</string>
    <string name="tectViewTareasDesvios">Buscar Tareas Desviadas</string>
    <string name="Alta_usuario_exito">Usuario creado con éxito</string>
    <string name="title_activity_proyectos">Proyectos</string>
    <string name="button_ver_tareas">Ver tareas</string>
    <string name="button_editar">Editar</string>
    <string name="button_eliminar">Eliminar</string>
    <string name="action_proyectos">Ver proyectos</string>
    <string name="title_activity_alta_proyecto">Alta Proyecto</string>
    <string name="datos_alta_proyecto">Datos del proyecto</string>
    <string name="proyecto_nombre">Nombre</string>
    <string name="error_nombre_proyecto">Nombre inválido</string>
    <string name="title_activity_editar_proyecto">Editar proyecto</string>
    <string name="text_view_proyectos_buscando">Buscando proyectos en el servidor…</string>
</resources>
