<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Daniel Campodonico; Emiliano Gioria; Lucas Moretti.
  ~ This file is part of Lab05.
  ~
  ~ Lab05 is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Lab05 is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Lab05.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
    android:id="@+id/tareaTitulo"
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:paddingTop="2dip" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tv_responsable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/tareaResponsable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/textView6"
            android:layout_marginLeft="2dip" />

        <TextView
            android:text="@string/tv_prioridad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:paddingRight="1dp"
            android:layout_centerInParent="false"
            android:forceHasOverlappingRendering="false"
            android:layout_below="@+id/textView6"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/tareaPrioridad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="false"
            android:forceHasOverlappingRendering="false"
            android:layout_toEndOf="@+id/textView7"
            android:layout_below="@+id/tareaResponsable"
            android:layout_marginLeft="2dip" />
    </RelativeLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:text="@string/tv_minutos_asignados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/tareaMinutosAsignados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dip" />

        <TextView
            android:text="@string/tv_minutos_trabajados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_weight="0.00"
            android:layout_marginLeft="@dimen/default_gap" />

        <TextView
            android:id="@+id/tareaMinutosTrabajados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dip" />
        <CheckBox
            android:id="@+id/tareaFinalizada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ToggleButton
            android:id="@+id/tareaBtnTrabajando"
            android:textOff="trabajar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="trabajando" />
        <Button
            android:id="@+id/tareaBtnEditarDatos"
            android:text="Editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/tareaBtnFinalizada"
            android:text="Finalizar!"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </LinearLayout>
</LinearLayout>